--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<p>dies ist ein test ;D</p>
+<p>dies ist ein test.</p>
+<p>es ist obst im haus.</p>
 </body>
 </html>
